Avoid warning from SharedLibraryLoader on J25.
This might not help with Java 26, which should release today, but it should help reduce the amount of errors printed when running on Java 25.